# Budget-Wear-limited

./: .gitignore  README.md  docker-compose.yml  render.yaml
backend/: .env.example  .gitignore  Dockerfile  create_db.py  manage.py  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  server.ts  tsconfig.json
backend/api/: admin.py  models.py  mpesa.py  serializers.py  urls.py  views.py
backend/api/migrations/: 0001_initial.py  0002_product_original_price_flashsale.py  0003_branch_map_url.py  0004_flashsale_image_url.py
backend/branches/: models.py  views.py
backend/branches/migrations/: 0001_initial.py
backend/budget_wear_project/: __init__.py  settings.py  wsgi.py
backend/budgetwear/: settings.py  urls.py  wsgi.py
backend/config/: celery.py  settings.py  urls.py
backend/core/: models.py  permissions.py  serializers.py  views.py
backend/core/migrations/: 0001_initial.py
backend/orders/: models.py  serializers.py  urls.py  views.py
backend/orders/migrations/: 0001_initial.py
backend/payments/: models.py  serializers.py  services.py  tasks.py  urls.py  views.py
backend/payments/migrations/: 0001_initial.py
backend/prisma/: schema.prisma  seed.ts
backend/products/: models.py  serializers.py  urls.py  views.py
backend/products/migrations/: 0001_initial.py
backend/src/: server.ts
backend/src/controllers/: branchController.ts  categoryController.ts  orderController.ts  productController.ts  userController.ts  wishlistController.ts
backend/src/lib/: auth.ts
backend/src/routes/: categoryRoutes.ts  (+4 more)
(+56 files in other folders)
