[project]
name = "budget-wear-backend"
version = "0.1.0"
description = "Budget Wear Limited Backend"
dependencies = [
    "Django==5.0.3",
    "djangorestframework==3.15.1",
    "django-cors-headers==4.3.1",
    "psycopg[binary]==3.1.18",
    "python-dotenv==1.0.1",
    "dj-database-url==2.1.0",
    "gunicorn==21.2.0",
    "djangorestframework-simplejwt==5.3.1",
    "whiteNoise==6.6.0",
]

[tool.poetry]
name = "budget-wear-backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
Django = "5.0.3"
djangorestframework = "3.15.1"
django-cors-headers = "4.3.1"
psycopg = {extras = ["binary"], version = "3.1.18"}
python-dotenv = "1.0.1"
dj-database-url = "2.1.0"
gunicorn = "21.2.0"
djangorestframework-simplejwt = "5.3.1"
whiteNoise = "6.6.0"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
